argocd-code/ollama-webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-webui
  namespace: backend
  labels:
    app: ollama-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama-webui
  template:
    metadata:
      labels:
        app: ollama-webui
    spec:
      containers:
        - name: ollama-webui
          image: ghcr.io/ollama-webui/ollama-webui:main
          ports:
            - name: http
              containerPort: 8080
