argocd-code/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: codellama
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: ollama
